Bug 351871 - Cantor's splash screen doesn't disappear on selecting R-backend
Summary: Cantor's splash screen doesn't disappear on selecting R-backend
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: r-backend (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: VHI critical
Target Milestone: ---
Assignee: Filipe Saraiva
URL: http://pastebin.com/yWcW9cH6
Keywords:
: 296546 377195 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-27 18:28 UTC by Garvit Khatri
Modified: 2017-10-08 08:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Garvit Khatri 2015-08-27 18:28:23 UTC
I have installed R-base backend it shows up in cantor and I can choose to create a worksheet with R backend, but again, it just shows the splash screen saying Initializing session and nothing happens. Refer to url for output of cantor_rserver.

Reproducible: Always

Steps to Reproduce:
1. Open Cantor
2. Select R Backend
3. Reproduced.

Actual Results:  
Cantor's splash screen doesn't disappear

Expected Results:  
Session should be initialized and user should be able to use R backend.

This blogs refers to the problem http://blogs.fsfe.org/drdanz/?p=182 but I am unable to install ppa:daniele.domenichelli
Comment 1 Filipe Saraiva 2017-04-28 19:41:17 UTC
R Backend is broken since several releases ago. We are trying to port the D-Bus technology implemented in R Backend to some standard streams communication technology like Q/KProcess. If someone has time to work on it, I and the Cantor community will be very grateful for the developer.
Comment 2 Filipe Saraiva 2017-04-28 19:42:21 UTC
*** Bug 296546 has been marked as a duplicate of this bug. ***
Comment 3 Filipe Saraiva 2017-04-28 19:49:28 UTC
*** Bug 377195 has been marked as a duplicate of this bug. ***
Comment 4 Filipe Saraiva 2017-10-08 08:19:10 UTC
Git commit 4d570e46d2f1067d216f2bb067443623bec47716 by Filipe Saraiva, on behalf of Rishabh Gupta.
Committed on 08/10/2017 at 08:00.
Pushed by filipesaraiva into branch 'r-backend'.

This change Ports R to make use of QProcess. Highlights of the changes are:

* Disable R server
* Make all the communication using QProcess (R's command line interface)
* Plotting is supported by but plots are not integrated in the worksheet
* Tab completion used to make use of RServer and hence it has been disabled for now

Differential Revision: https://phabricator.kde.org/D7565

Close T6116

M  +5    -4    src/backends/R/CMakeLists.txt
M  +1    -7    src/backends/R/rbackend.cpp
M  +0    -1    src/backends/R/rbackend.h
A  +16   -0    src/backends/R/rbackend.kcfg
M  +56   -21   src/backends/R/rexpression.cpp
M  +10   -7    src/backends/R/rexpression.h
M  +118  -83   src/backends/R/rsession.cpp
M  +17   -14   src/backends/R/rsession.h
A  +3    -0    src/backends/R/settings.kcfgc

https://commits.kde.org/cantor/4d570e46d2f1067d216f2bb067443623bec47716