This change Ports R to make use of QProcess. Highlights of the changes are:

* Disable R server
* Make all the communication using QProcess (R's command line interface)
* Plotting is supported by but plots are not integrated in the worksheet
* Tab completion used to make use of RServer and hence it has been disabled for now

Differential Revision: https://phabricator.kde.org/D7565

Close T6116
BUG: 351871